--- a/T01.md
+++ b/T01.md
@@ -1,6 +1,6 @@
 # Crear un módulo (Temas 6, 8)
 
-Cada alumno creará un módulo helpdesk con su nombre, por ejemplo yo crearé el módulo "helpdesk_angelmoya".
+Cada alumno creará un módulo helpdesk con su nombre, por ejemplo yo crearé el módulo "helpdesk_aliciagarzo".
 
 Todos trabajaremos en el mismo repositorio, pero cada uno en su módulo en su fork.
 
